fixed chart hiding on small screen

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,3 +18,15 @@ $font-family-base: 'Comfortaa';
     margin-top: 20vh;
     margin-bottom: 30vh;
 }
+
+.chart {
+    background-color: chartreuse;
+    display: none;
+}
+
+@media only screen and (max-width: 800px) {
+    .chart {
+        background-color: blue;
+        display: none;
+    }
+}
